AUTOMAKE_OPTIONS = foreign
SUBDIRS = src
dist_doc_DATA= script/firewall_rule.sh \
               script/start.sh \
               script/schema.sqlite3 \
               script/schema.sql \
               keys/Staging_Signature_PrivateKey.p12 \
               keys/uidai_auth_stage.cer \
               img/aadhaar-logo_en-GB.jpg \
               img/aadhaar-logo_en-GB-old.png \
               img/favicon.ico \
               img/fb_logo.png \
               img/sign-in-with-twitter-gray.png \
               img/wait.gif \
               img/1x/btn_google_signin_dark_disabled_web.png \
               img/1x/btn_google_signin_dark_normal_web.png \
               img/1x/btn_google_signin_light_disabled_web.png \
               img/1x/btn_google_signin_light_normal_web.png \
               img/1x/btn_google_signin_dark_focus_web.png \
               img/1x/btn_google_signin_dark_pressed_web.png \
               img/1x/btn_google_signin_light_focus_web.png \
               img/1x/btn_google_signin_light_pressed_web.png

